--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.7.0",
-    "shadcn": "^3.8.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.5.0",
-    "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
     "zustand": "^5.0.11"
   },
@@ -46,7 +46,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9.27.0",
     "eslint-config-next": "16.1.6",
+    "shadcn": "^3.8.5",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
   "pnpm": {
