--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.2",
     "gsap": "^3.14.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
